console.log('DB
[eval]:1
const pool = require('./src/config/pool'); pool.query('SELECT 1').then(r = OK:', r.rows)).catch(e = ERROR:', e.message))
                                                                           ^^

SyntaxError: missing ) after argument list
[90m    at makeContextifyScript (node:internal/vm:185:14)[39m
[90m    at node:internal/process/execution:107:22[39m
    at [eval]-wrapper:6:24
[90m    at runScript (node:internal/process/execution:101:62)[39m
[90m    at evalScript (node:internal/process/execution:133:3)[39m
[90m    at node:internal/main/eval_string:51:3[39m

Node.js v20.20.2
